# golang-proto

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.devcontainer/: Dockerfile  db.dockerfile  devcontainer.json  docker-compose.yml  up.sql
database/: BUILD.bazel  postgres.go
models/: BUILD.bazel  models.go
repository/: BUILD.bazel  repository.go
server/: BUILD.bazel  server.go
server-student/: BUILD.bazel  main.go
studentproto/: BUILD.bazel  student.proto
