load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "sem-hm/golang-proto/server",
    visibility = ["//visibility:public"],
    deps = [
        "//models",
        "//repository",
        "//studentproto:studentpb",
    ],
)
